<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="5dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.expenx.expenx.activity.LoginActivity">

    <RelativeLayout
        android:id="@+id/layoutCircleIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/circleAroundE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/circle_of_e"
            android:src="@drawable/circle_login_activity" />

        <TextView
            android:id="@+id/textViewE"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="false"
            android:layout_centerVertical="false"
            android:padding="0dp"
            android:text="@string/e"
            android:textColor="@color/colorText"
            android:textSize="100sp" />

        <TextView
            android:id="@+id/textViewExpenx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expenx"
            android:textColor="@color/colorText"
            android:textSize="25sp"
            android:layout_below="@+id/textViewE"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonLoginGoogle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/textViewOrViaEmail"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_google"
        android:text="@string/login_with_google"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/textViewOrViaEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:text="@string/or_via_email"
        android:textColor="@color/colorTextMoreTransparent" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editTextPassword"
        android:ems="10"
        android:hint="@string/email"
        android:textColor="@color/colorText"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorText" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLogin"
        android:ems="10"
        android:hint="@string/password"
        android:textColor="@color/colorText"
        android:inputType="textPassword"
        android:textColorHint="@color/colorText" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_above="@+id/textViewForgotPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_normal"
        android:text="@string/login"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewCreateAccount"
        android:layout_centerHorizontal="true"
        android:text="@string/forgot_your_password"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/textViewCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textViewAllRightsLoginPage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/textViewAllRightsLoginPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/all_rights_reserved_2017_savick"
        android:textColor="@color/colorText" />

</RelativeLayout>
