<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.expenx.expenx.activity.SettingsActivity">

    <Button
        android:id="@+id/chngePwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/colorgreyText"
        android:background="@drawable/button_normal"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/defaultCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_currency"
        android:textColor="@color/colorgreyText"
        android:background="@drawable/button_normal"
        android:layout_marginTop="15dp"/>
    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textColor="@color/colorgreyText"
        android:background="@drawable/button_normal"
        android:layout_marginTop="15dp"/>
</LinearLayout>
