<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.expenx.expenx.activity.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">
            <RelativeLayout
                android:id="@+id/layoutCircleIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/circleAroundE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/circle_of_e"
                    android:src="@drawable/circle_login_activity" />

                <TextView
                    android:id="@+id/textViewE"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="false"
                    android:layout_centerVertical="false"
                    android:padding="0dp"
                    android:text="@string/e"
                    android:textColor="@color/colorText"
                    android:textSize="100sp" />

                <TextView
                    android:id="@+id/textViewExpenx"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expenx"
                    android:textColor="@color/colorText"
                    android:textSize="25sp"
                    android:layout_below="@+id/textViewE"
                    android:layout_centerHorizontal="true" />

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/textContent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/developTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/develop_string"
                android:textColor="@color/colorgreyText"
                android:textSize="18dp"/>
            <TextView
                android:id="@+id/developTeam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorgreyText"
                android:textSize="20dp"
                android:text="SAVICK"/>
            <TextView
                android:id="@+id/errorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/errors_string"
                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorgreyText"
                android:textSize="15dp"/>
            <TextView
                android:id="@+id/emailText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="expenx.savick@gmail.com"
                android:gravity="center_horizontal"
                android:textColor="@color/colorgreyText"
                android:textSize="15dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <TextView
                android:id="@+id/projectDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/projectDescription"
                android:textSize="15dp"
                android:textColor="@color/colorgreyText"
                android:gravity="center_horizontal"/>
            <TextView
                android:id="@+id/allRightsReserved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/allRightsReserved"
                android:textSize="15dp"
                android:textColor="@color/colorgreyText"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
