<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.expenx.expenx.activity.ForecastActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/forecastedTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forecasted_expense"
            android:textColor="@color/colorwhiteText"
            android:textSize="20dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/forecastedNextMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forecasted_next_month"
            android:textColor="@color/colorgreyText"
            android:textSize="15dp"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/forecastedAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_marginTop="18dp"
        android:textSize="35dp"
        android:text="XX,XXX.XX"
        android:textColor="@color/colorwhiteText"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/forecastedAmount"
        android:layout_marginTop="30dp">
        <TextView
            android:id="@+id/lastMonthTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_last_month"
            android:textColor="@color/colorgreyText"
            android:textSize="15dp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/lastMonthExpense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="XX,XXX.XX"
            android:textColor="@color/colorwhiteText"
            android:textSize="15dp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout2"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="@string/category_travel"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="@string/category_food"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="@string/category_bills"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="@string/category_medical"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="@string/category_other"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/travelAmount"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="XXX.XX"
                android:layout_gravity="end"/>
            <TextView
                android:id="@+id/foodAmount"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="XXX.XX"
                android:layout_gravity="end"/>
            <TextView
                android:id="@+id/billsAmount"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="XXX.XX"
                android:layout_gravity="end"/>
            <TextView
                android:id="@+id/medicalAmount"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="XXX.XX"
                android:layout_gravity="end"/>
            <TextView
                android:id="@+id/otherAmount"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="15dp"
                android:textColor="@color/colorwhiteText"
                android:text="XXX.XX"
                android:layout_gravity="end"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
