<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context="com.expenx.expenx.activity.DebtActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.46"
        android:orientation="horizontal">
        <Button
            android:id="@+id/buttonBorrowFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:background="@drawable/button_normal"
            android:text="@string/borrow_from"
            android:textColor="@color/colorgreyText"/>
        <Button
            android:id="@+id/buttonLendTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:background="@drawable/button_normal"
            android:text="@string/lend_to"
            android:textColor="@color/colorgreyText"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/debtsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.04"
        android:background="@drawable/background_list_view">
        <ListView
            android:id="@+id/debtsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight=".2"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/debtTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text="@string/debt_txt"
                android:textColor="@color/colorwhiteText"/>
            <TextView
                android:id="@+id/debtAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="15dp"
                android:layout_weight="1"
                android:text="XXX.XX"
                android:textColor="@color/colorwhiteText"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/creditTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text="@string/credit_txt"
                android:textColor="@color/colorwhiteText"/>
            <TextView
                android:id="@+id/creditAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text="XXX.XX"
                android:textColor="@color/colorwhiteText"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/balanceTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="15dp"
                android:text="@string/balance_txt"
                android:textColor="@color/colorwhiteText"/>
            <TextView
                android:id="@+id/balanceAmount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="XXX.XX"
                android:textColor="@color/colorwhiteText"
                android:textSize="15dp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.5"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
