<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.expenx.expenx.activity.ReminderActivity">
    <LinearLayout
        android:id="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Switch
            android:id="@+id/remindSelector"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/reminder_text"
            android:textColor="@color/colorwhiteText"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout1"
        android:layout_marginTop="11dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:text="@string/frequency_text"
            android:textColor="@color/colorwhiteText"/>
        <Spinner
            android:id="@+id/frequencySpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/layout2"
        android:layout_marginTop="15dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/to_remind"
            android:textColor="@color/colorwhiteText"/>
    </LinearLayout>
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="Save"
        android:background="@drawable/button_normal"
        android:textColor="@color/colorwhiteText"/>

</RelativeLayout>
